alterações: texto e media query

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     qualidade!</strong>
             </h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Mateus Pereira, desenvolvedor Front-end com especialidade
-                em React, HTML e CSS. Ajudo pequenos
-                negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                em React, HTML e CSS. Você pode entrar em contato comigo em qualquer uma das redes abaixo.
+            </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/pmateuus">
-                <img src="./assets/github.png">
+                    <img src="./assets/github.png">
                     Github
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/pmateuus">
@@ -44,7 +44,7 @@
         <img class="apresentacao__imagem" src="./assets/image.jpg" alt="foto do Mateus Pereira">
     </main>
     <footer class="rodape">
-         <p> Desenvolvido por pmateuus </p>
+        <p> Desenvolvido por pmateuus </p>
     </footer>
 </body>
 
