--- a/about.html
+++ b/about.html
@@ -20,16 +20,17 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-            <p class="apresentacao__conteudo__texto">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou um estudante universitário de ADS na USF e apaixonado por
+                tecnologia. Meu foco está voltado para o desenvolvimento Front-end, onde tenho experiência com
+                tecnologias como JavaScript, HTML5 e CSS3.Constantemente em busca de aprimorar meus conhecimentos no
+                universo do Desenvolvimento de Software, atualmente estou me dedicando ao estudo aprofundado de
+                JavaScript e React pela plataforma Alura, além de explorar outros frameworks e tecnologias relevantes.
+            </p>
+            <p class="apresentacao__conteudo__texto">Meu objetivo é contribuir para o sucesso da empresa, aplicando
+                minhas habilidades em resolver problemas e entregando soluções criativas e eficientes. Sou um
+                profissional dedicado, motivado e comprometido com o aprendizado contínuo. Se você está em busca de um
+                alguém entusiasmado e com paixão pela tecnologia, não hesite em entrar em contato comigo! Estou animado
+                para fazer parte de um time dinâmico e contribuir para o crescimento mútuo!</p>
         </section>
         <img src="./assets/image.jpg" alt="foto do Mateus Pereira">
     </main>
