alter: voltando projeto para o status anterior

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     Linkedin
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://instagram.com/pmateuus">
-                    <img src="./assets/icone-email.png">
+                    <img src="./assets/instagram.png">
                     Instagram
                 </a>
             </div>
